src/pages/Slippers/Products/ProductsList/ProductsList.module.css
.ProductsList {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
}
.Product {
    list-style-type: none;
    margin: 0;
    padding: 0 1.5%;
}
.Product * {
    margin: 0;
    max-width: 100%;
}
.Product h3 {
    margin-top: -15px;
}
.Product a:link,
.Product a:visited{
    display: block;
    text-decoration: none;
    text-align: center;
    color: #222;
    font-weight: 300;
    position: relative;
    font-size: 13px;
}
.MainImage, .SecondaryImage {
    transition: all 0.3s ease;    
    mix-blend-mode: multiply;
}
.MainImage {
    position: absolute;
    top: 0;
    left: 0;
    opacity: 1;  
}
.Product a:hover .MainImage {
    opacity: 0;
}

.SecondaryImage {
    opacity: 0;
}
.Product a:hover .SecondaryImage {
    opacity: 1;
}

.NoProducts {
    display: block;
}
.OutOfStock {
    border: 1px solid #ddd;
    font-size: 12px;
    border-radius: 7px;
    text-align: center;
    margin-top: 20px;
    padding: 50px 25px;
    list-style-type: none;
}
.OutOfStock a:link,
.OutOfStock a:visited {
    color: #f64c3f;
    text-decoration: none;
}
.OutOfStock a:hover,
.OutOfStock a:focus {
    text-decoration: underline;
}

/*LOADING STYLING*/
.Loading {
    text-align: center;
}
.Loading *{
    display: block;
    margin: 0 auto 5px;
    border-radius: 5px;
    animation-duration: 2s;
    animation-fill-mode: forwards;
    animation-iteration-count: infinite;
    animation-name: placeHolderShimmer;
    animation-timing-function: linear;
    background: #bebebe;
    background: linear-gradient(to right, #f5f4f4 8%, #f0f0f0 38%, #f5f5f5 54%);
    background-size: 100vw 640px;
    position: relative;
}
@keyframes placeHolderShimmer{
    0%{
        background-position: -50vw 0
    }
    100%{
        background-position: 50vw 0
    }
}
.Loading div {
    width: 100%;
    padding: 50% 0;
    margin-bottom: 20px;
}
.Loading h3{
    width:70%
}
.Loading p {
    width: 90%;
}
.Loading span {
    width: 40%;
}

